# auto_mouse

./: .gitattributes  .gitignore  README.md  anything_auto.spec  auto_mouse.spec  build_mac.sh  build_release.sh  build_win.sh  main.py  project.md  pyproject.toml  readme.md  requirements.txt
.github/workflows/: release.yml
Doc/: USER_MANUAL_zh.md
artifacts/AutoMouse-macos/Contents/: Info.plist
docs/: ACCEPTANCE_CHECKLIST.md  ARCHITECTURE.md  BACKLOG.md  BUILD.md  DEVELOPMENT_PLAN.md  PROJECT_CHARTER.md  RUN.md  USER_MANUAL_zh.md
rpa_assistant/: __init__.py  constants.py  paths.py
rpa_assistant/app/: bootstrap.py  logging_setup.py
rpa_assistant/app/automation/: __init__.py  browser_pw.py  desktop.py  result.py
rpa_assistant/app/core/: __init__.py  condition_engine.py  runner.py  (+1 more)
src/: __init__.py  main.py
src/config/: platform.py  settings.py
src/data/: event.py  session.py
src/gui/: app.py
src/player/: action_executor.py  playback_engine.py
src/recorder/: __init__.py  chrome_controller.py  event_capture.py  hotkey_manager.py
src/utils/: logger.py  validators.py
tests/: __init__.py  conftest.py  test_batch_cancel.py  test_batch_run.py  test_browser_pw.py  test_condition_engine.py  test_config_profiles.py  test_desktop_open_file.py  test_excel.py  test_flow_canvas_layout.py  test_presentation.py  test_recording_hotkey.py  test_recording_step_builders.py  test_repositories.py  test_runner.py  test_runner_clipboard.py  test_runner_pw.py  test_single_flow_run.py  test_variable_engine.py
tests/unit/: test_event.py  test_session.py  test_storage.py
(+53 files in other folders)
