[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anything-auto"
version = "0.1.0"
description = "Windows-focused cross-app RPA desktop assistant (Excel batch + flows)."
readme = "project.md"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.6",
  "openpyxl>=3.1",
  "platformdirs>=4.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rpa_assistant*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
