[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anything-auto"
version = "0.1.0"
description = "Recording-first RPA desktop assistant (flows, single run, PySide6)."
readme = "project.md"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.6",
  "platformdirs>=4.2",
  "pyautogui>=0.9.53",
  "pyperclip>=1.8.2",
]

[project.optional-dependencies]
browser = [
  "playwright>=1.40",
]
# Desktop recording tab (pynput listeners). Not required for core flows.
recorder = [
  "pynput>=1.7",
]
packaging = [
  "pyinstaller>=6.0",
]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rpa_assistant*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
